# federated-model-aggregation

./: .gitignore  CODEOWNERS  README.md  index.html  pre-commit-hook.sh  requirements.txt  setup.cfg
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_issue.md  feature_request.md  open_issue.md
.github/workflows/: test-javascript-package.yml  test-node-pnpm-package.yml  test-python-package.yml  test-submodules.yml  test-typescript-client.yml
aggregator/: .coveragerc  .pre-commit-config.yaml  Makefile  Pipfile  README.md  app.py  manage.py  patch_xray.py  samconfig.toml  setup.cfg  template-remote.yaml  template.yaml
aggregator/federated_learning_project/: fma_settings.py  settings_base.py  settings_local.py  settings_remote.py
aggregator/secrets_managers/: aws_secrets.py
aggregator/tests/: conftest.py  test_handler.py
aggregator/tests/fixtures/: TaskQueue_ModelAggregate.json  sam-local-event.json
aggregator/tests/fixtures/mediafiles/fake/path/model_updates/: 7  8
api_service/: .coveragerc  .pre-commit-config.yaml  Makefile  Pipfile  README.md  patch_xray.py  service_initialization.py  setup.cfg  template-remote.yaml  template.yaml
api_service/federated_learning_project/: fma_settings.py  s3_storage_utils.py  settings_base.py  settings_local.py  settings_remote.py  settings_secret.py  urls.py  utils.py
api_service/secrets_managers/: aws_secrets.py
api_service/tests/: conftest.py  test_aws_secrets.py  test_handler.py
api_service/tests/fixtures/: DjangoQ_Task.json  TaskQueue_FederatedModel.json  TaskQueue_ModelUpdate.json  TaskQueue_client.json
clients/: README.md
clients/javascript_client/: .eslintrc.json  .prettierignore  .prettierrc  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
clients/python_client/: .coveragerc  .pre-commit-config.yaml  Makefile  Pipfile  README.md  requirements.txt  setup.cfg  setup.py
clients/python_client/fma_connect/: __init__.py  clients.py  exceptions.py  settings.py  version.py
clients/python_client/fma_connect/tests/: test_exceptions.py  test_webclient.py
connectors/: README.md
connectors/django/: .coveragerc  .pre-commit-config.yaml  CODEOWNERS  MANIFEST.in  Makefile  Pipfile  README.md  api_endpoints.md  conftest.py  requirements-api.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
connectors/django/fma_django/: admin.py  apps.py  authenticators.py  models.py  version.py
connectors/django/fma_django/migrations/: 0001_initial.py
connectors/django/fma_django_api/: apps.py  urls.py  utils.py
connectors/django/fma_django_api/v1/: fields.py  filters.py  paginators.py  permissions.py  serializers.py  urls.py  views.py
connectors/django/fma_django_api/v1/tests/: test_client_aggregate_score_viewset.py  test_federated_model_viewset.py  test_model_aggregate_viewset.py  test_model_update_viewset.py  utils.py
connectors/django/fma_django_connectors/: __init__.py  aggregator_connector.py  api_handlers.py  metadata_connector.py  utils.py
connectors/django/fma_django_connectors/tests/: fma_settings.py  test_api_handlers.py  test_tasks.py  test_update_database.py
connectors/django/tests/: test_models.py
connectors/django/tests/fixtures/: DjangoQ_Schedule.json  TaskQueue_ClientAggregateScore.json  TaskQueue_FederatedModel.json  TaskQueue_ModelAggregate.json  TaskQueue_ModelArtifact.json  TaskQueue_ModelUpdate.json  TaskQueue_User.json
docs/: Makefile  update_documentation.py
docs/source/: api_endpoints.rst  (+6 more)
examples/: .pre-commit-config.yaml  install_service_requirements.sh  kill_service.sh  run_django_example.sh  setup.cfg  start_service.sh
examples/client_examples/javascript_client/: README.md  package.json  utils.ts
examples/client_examples/python_client/: README.md  generate_post_data.py  requirements-dev.txt  run_client.sh  run_example.sh  setup.sh  utils.py
examples/client_examples/python_client/dataprofiler_clients/: _typing.py  client.py  requirements.txt
examples/client_examples/python_client/dataprofiler_clients/dataprofiler_utils/: background_text.txt  generation_scripts.py
examples/client_examples/python_client/dataprofiler_clients/notebooks/: dataprofiler_client.ipynb
examples/client_examples/python_client/dataprofiler_developer/: README.md  create_initial_model_json_files.py  model_utils.py
examples/client_examples/python_client/dataprofiler_developer/tests/: test_model_utils.py
examples/django-deployment/: Makefile  Pipfile  README.md  manage.py
examples/django-deployment/federated_learning_project/: asgi.py  fma_settings.py  settings_local.py  settings_remote.py  settings_secret.py  wsgi.py
fma-core/: .pre-commit-config.yaml  CODEOWNERS  Makefile  Pipfile  README.md  requirements-dev.txt  setup.cfg  setup.py
terraform_deploy/: README.md  Tips_and_Best_Practice_Notes.md  aggregator.tf  api_service.tf  api_service_alb.tf  api_service_tg.tf  deploy_vars.tf  iam_lambda.tf  metadata_db.tf  model_data_db.tf  policies.tf  provider.tf  secrets_manager.tf  security_groups.tf  utils.tf
(+65 files in other folders)
