[metadata]
name = aggregator
description = A component to perform aggregation on model updates that are passed to your system
long_description = file: README.md
license = Apache License 2.0
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Information Technology
  Intended Audience :: Science/Research
  Topic :: Education
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Information Analysis
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3

[tool:pytest]
django_find_project = false
pythonpath = "."
DJANGO_SETTINGS_MODULE = federated_learning_project.settings_local
env =
  FMA_SETTINGS_MODULE = federated_learning_project.fma_settings

[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
multi_line_output = 3
skip=iam/,examples/,connectors/,api_service/,clients/,.aws-sam,fma-core
profile = black
src_paths = .
