[metadata]
name = client
description = An interface used for client code to interact with the FMA service
long_description = file: README.md
license = Apache License 2.0
classifiers =
    Framework :: Django
    Framework :: Django :: 4.*
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
multi_line_output=3
profile=black
skip=venv
src_paths=fma_connect
