[metadata]
name = fma-django
description = A Django app for db / model / API connections for the FMA.
long_description = file: README.md
license = Apache License 2.0
classifiers =
    Framework :: Django
    Framework :: Django :: 4.*
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8

[flake8]
exclude=*/migrations/*
extend-ignore = E203
max-line-length = 88
per-file-ignores =
    ./connectors/django/fma_django/models.py:D106,D107
    ./connectors/django/fma_django_api/v1/serializers.py:D106
    ./connectors/django/fma_django_api/v1/filters.py:D106

[isort]
multi_line_output = 3
profile = black
skip_glob = fma_django/migrations/*,aggregator/*,api_service/*,fma-core/*
src_paths = fma_django,fma_django_api,fma_django_connectors
